# ZhiZha-Messenger-Client

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  README_EN.md  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/igorantivirus/unions/: MainActivity.java
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
assets/: stat.xml
assets/fonts/: fonts.txt
assets/ui/: chat-scene.rcss  chat-scene.rml  game-card.rcss  game-card.rml  game-menu.rcss  game-menu.rml  hello-scene.rcss  hello-scene.rml  main-menu.rcss  main-menu.rml  settings-menu.rcss  settings-menu.rml
assets/ui/overlays/: create-group-overlay.rcss  create-group-overlay.rml  gameover-overlay.rcss  gameover-overlay.rml  menu-buttons.rcss  message-overlay.rcss  message-overlay.rml  overlay.rcss  pause-overlay.rml  win-overlay.rml
cmake/: PlatformUtils.cmake
gradle/wrapper/: gradle-wrapper.properties
src/: main.cpp
src/App/: AppContext.hpp  AppState.hpp  ClientArguments.hpp  ClientEngine.hpp  HardStrings.hpp  KeyGenerator.cpp  KeyGenerator.hpp
src/App/Events/: AppEvent.hpp  AppEventHub.hpp  IAppEventListener.hpp
src/App/NetworkSubsystem/: NetEvent.hpp  NetEventHub.hpp  NetworkSubsystem.hpp  ThreadSafeQueue.hpp
src/App/Scenes/: ChatScene.hpp  ClientScenesFactory.hpp  HelloScene.hpp  IDs.hpp
src/App/Services/: ChatService.hpp  RegistrationService.hpp
src/App/UI/: ChatPanel.hpp  CreateGroupOverlay.hpp  MessageOverlay.hpp
src/Core/: Random.hpp  StringHashMap.hpp  StringUtils.hpp  Time.hpp  Types.hpp
src/Core/Managers/: AudioManager.hpp  PathMeneger.hpp  TextureManager.hpp
src/Engine/: AdvancedContext.hpp  Arguments.hpp  EmptyScene.hpp  Engine.hpp  EngineSettings.hpp  EngineWithAudio.hpp  OneRmlDocScene.hpp  Scene.hpp  SceneAction.hpp  SceneFabrick.hpp  SceneFactory.hpp  WindowSizeInfo.hpp
src/NetworkSubsystem/: INetEventListener.hpp  NetEvent.hpp  NetEventHub.hpp  NetworkSubsystem.hpp  ThreadSafeQueue.hpp
src/network/: WebSocketClient.cpp  WebSocketClient.hpp  WebSocketClientStandalone.cpp  WebSocketClientStandalone.hpp
src/network/Utils/: ClientOptions.hpp  NetworkEvents.hpp  OutMsg.hpp  State.hpp  WebSocketSession.cpp  WebSocketSession.hpp  WsUrl.hpp
src/protocol/: JsonMessages.hpp  JsonPacker.cpp  JsonParser.cpp
